--- a/configs/nerf_lego.yaml
+++ b/configs/nerf_lego.yaml
@@ -1,4 +1,4 @@
-device: "cpu"
+device: "cuda"
 
 dataset: 
   type: "lego"
@@ -18,11 +18,12 @@ model:
   num_selected_rays: 8192
 
 train:
-  num_epochs: 50000
+  num_epochs: 5000
   chunk_size: 16384 # set 4096 for 1.2GB of GPU memory
-  validate_every: 1000
-  save_checkpoint_for_every: 2000
+  validate_every: 100
+  save_checkpoint_for_every: 200
   lr: 5e-3
+  checkpoint_path: '/scratch/sravindh/project_nerf/checkpoints_1/checkpoint30000.tar'
   # lrate_decay: 250
   # update_lr_every: 0
 
