--- a/configs/nerf_lego.yaml
+++ b/configs/nerf_lego.yaml
@@ -16,6 +16,7 @@ model:
   include_input_in_posencoding: False
   include_input_in_direncoding: False
   num_selected_rays: 1024
+  centercrop_epochs: 500
 
 train:
   num_epochs: 200000
